--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,15 +1,14 @@
 ---
-title: Rohit Jain
+title: Ali Yilmaz
 layout: default
 ---
+
 <div class="mid-section-home">
-    <h1><span>I am </span>{{ site.author_name }}</h1>
-    <div class="row sub-heading">
-        <div class="summary-about-me">
-            <p>{{ page.home_text }}</p>
-        </div>
-        <div class="nav-link">
-            {% include navigation.html %}
-        </div>
+  <h1 class="animationText"><span>I am </span>{{ site.author_name }}</h1>
+  <div class="row sub-heading">
+    <div class="summary-about-me">
+      <p>{{ page.home_text }}</p>
     </div>
+    <div class="nav-link">{% include navigation.html %}</div>
+  </div>
 </div>
